Fix issue with disabled togglecontrol double border
Fixes #12049.

This PR fixes an issue where a togglecontrol, wrapped in a Disabled component, would show a double border. The issue was that it inherited a border from the parent checkbox style (because the toggle is technically a reskinned checkbox).

--- a/packages/components/src/toggle-control/style.scss
+++ b/packages/components/src/toggle-control/style.scss
@@ -10,4 +10,9 @@
 		display: block;
 		margin-bottom: 4px;
 	}
+
+	// This overrides a border style that is inherited from parent checkbox styles.
+	.components-form-toggle__input {
+		border: none;
+	}
 }
